# buildmaster-config

./: .gitignore  .travis.yml  LICENSE.txt  Makefile  README.md  buildbot.sh  requirements-3.13.txt  requirements-3.9.txt  requirements.in  requirements.txt  update_code.sh  update_conf.sh  worker_example.Dockerfile
.github/ISSUE_TEMPLATE/: new_worker.yml
.github/workflows/: build.yml  check.yml  deploy.yml
buildbothammer/: README.md  pyproject.toml
buildbothammer/src/buildbothammer/: __init__.py  __main__.py
master/: .gitignore  buildbot.tac  master.cfg  utils.py  xmlrpc.py
master/custom/: __init__.py  auth.py  branches.py  builders.py  discord_reporter.py  email_formatter.py  factories.py  pr_reporter.py  pr_testing.py  release_dashboard.py  schedulers.py  settings.py  steps.py  testsuite_utils.py  worker_downtime.py  workers.py
master/custom/static/: dashboard.css
master/custom/templates/: releasedashboard.html
master/public_html/: robots.txt
